App feedback: In the humanBody activities, make the success image less intrusive, thus allowing the child to see his correct answer (on mobile devices, the "hover" pseudo-class is still active after touch).

--- a/css/pageLayout.css
+++ b/css/pageLayout.css
@@ -71,6 +71,12 @@
   transform: scale(.5);
 }
 
+.result > div.action-feedback {
+  height: calc(50% - 115px);
+  transform: scale(1);
+  background-position: right;
+}
+
 #scoreGood, #scoreBad {
   display: flex;
 }
